fix(17): revise plans based on checker feedback

--- a/.planning/phases/17-save-system-rating-decoupling/17-01-PLAN.md
+++ b/.planning/phases/17-save-system-rating-decoupling/17-01-PLAN.md
@@ -100,7 +100,7 @@ Output: LocalStorageService save methods, Joke.isSaved property, ViewModel save/
 8. **Memory cache:** Also add `savedJokeIds` to the memory cache preload if one exists. Check `preloadMemoryCacheAsync()` -- if it preloads ratings into memory, do the same for saved IDs. If there is no memory cache for ratings, skip this step.
 
 **Joke.swift** -- Add `var isSaved: Bool` property to the Joke struct:
-1. Add `var isSaved: Bool = false` after the existing `var userRating: Int?` property (not inside CodingKeys or Codable -- this is a local-only property).
+1. Add `var isSaved: Bool = false` after the existing `var userRating: Int?` property.
 2. Add `isSaved` to the `CodingKeys` enum.
 3. In the `init(from decoder:)` method, add `isSaved = try container.decodeIfPresent(Bool.self, forKey: .isSaved) ?? false` (backward compatible).
 4. In the manual `init(...)` if one exists, add `isSaved: Bool = false` parameter.
