--- a/.planning/phases/17-save-system-rating-decoupling/17-02-PLAN.md
+++ b/.planning/phases/17-save-system-rating-decoupling/17-02-PLAN.md
@@ -13,6 +13,8 @@ files_modified:
   - MrFunnyJokes/MrFunnyJokes/Views/AllTimeTopTen/RankedJokeCard.swift
   - MrFunnyJokes/MrFunnyJokes/App/MrFunnyJokesApp.swift
   - MrFunnyJokes/MrFunnyJokes/ViewModels/JokeViewModel.swift
+  - MrFunnyJokes/MrFunnyJokes/Views/SearchView.swift
+  - MrFunnyJokes/MrFunnyJokes/Views/JokeFeedView.swift
 autonomous: true
 
 must_haves:
@@ -38,7 +40,7 @@ must_haves:
       to: "onSave callback"
       via: "Save button tap triggers onSave closure"
       pattern: "onSave"
-    - from: "All 7 JokeDetailSheet call sites"
+    - from: "All 8 JokeDetailSheet call sites (6 functional + 2 preview)"
       to: "ViewModel.saveJoke()"
       via: "onSave closure calling saveJoke or equivalent"
       pattern: "onSave.*saveJoke"
@@ -49,7 +51,7 @@ must_haves:
 ---
 
 <objective>
-Add Save button to JokeDetailSheet, wire onSave callback through all 7 call sites, and rewire MeView to display saved jokes instead of rated jokes.
+Add Save button to JokeDetailSheet, wire onSave callback through all 8 call sites (6 functional + 2 preview), and rewire MeView to display saved jokes instead of rated jokes.
 
 Purpose: Complete the user-facing UI for the save system -- users see and interact with the Save button, and the Me tab reflects their saved collection.
 Output: Working Save button in all joke detail sheets, MeView showing saved jokes with proper empty state, swipe-to-unsave behavior.
@@ -73,12 +75,14 @@ Output: Working Save button in all joke detail sheets, MeView showing saved joke
 @MrFunnyJokes/MrFunnyJokes/Views/JokeOfTheDayView.swift
 @MrFunnyJokes/MrFunnyJokes/Views/AllTimeTopTen/RankedJokeCard.swift
 @MrFunnyJokes/MrFunnyJokes/App/MrFunnyJokesApp.swift
+@MrFunnyJokes/MrFunnyJokes/Views/SearchView.swift
+@MrFunnyJokes/MrFunnyJokes/Views/JokeFeedView.swift
 </context>
 
 <tasks>
 
 <task type="auto">
-  <name>Task 1: Add Save button to JokeDetailSheet and wire onSave through all 7 call sites</name>
+  <name>Task 1: Add Save button to JokeDetailSheet and wire onSave through all 8 call sites (6 functional + 2 preview)</name>
   <files>
     MrFunnyJokes/MrFunnyJokes/Views/JokeDetailSheet.swift
     MrFunnyJokes/MrFunnyJokes/Views/JokeCardView.swift
@@ -86,6 +90,8 @@ Output: Working Save button in all joke detail sheets, MeView showing saved joke
     MrFunnyJokes/MrFunnyJokes/Views/JokeOfTheDayView.swift
     MrFunnyJokes/MrFunnyJokes/Views/AllTimeTopTen/RankedJokeCard.swift
     MrFunnyJokes/MrFunnyJokes/App/MrFunnyJokesApp.swift
+    MrFunnyJokes/MrFunnyJokes/Views/SearchView.swift
+    MrFunnyJokes/MrFunnyJokes/Views/JokeFeedView.swift
   </files>
   <action>
 **JokeDetailSheet.swift** -- Add onSave parameter and Save button:
@@ -113,7 +119,7 @@ Output: Working Save button in all joke detail sheets, MeView showing saved joke
 
 3. Update BOTH preview providers in JokeDetailSheet.swift to include `onSave: {}`.
 
-**All 7 call sites** -- Add `onSave` parameter to each `JokeDetailSheet(` instantiation. Find all sites by searching for `JokeDetailSheet(` in the codebase. The research identified these locations:
+**All 8 call sites (6 functional + 2 preview)** -- Add `onSave` parameter to each `JokeDetailSheet(` instantiation. Find all sites by searching for `JokeDetailSheet(` in the codebase. The research identified these locations:
 
 1. **JokeCardView.swift** (~line 81): Add `onSave: { viewModel.saveJoke(joke) }` -- check how `viewModel` is referenced here. If JokeCardView uses callback closures instead of a direct viewModel reference, add an `onSave` closure parameter to JokeCardView itself (alongside `onShare`, `onCopy`, `onRate`) and pass it through. Then update all JokeCardView instantiation sites to provide the onSave closure.
 
@@ -132,16 +138,19 @@ Output: Working Save button in all joke detail sheets, MeView showing saved joke
 **CRITICAL:** If JokeCardView uses callback closures (`onShare`, `onCopy`, `onRate`), then you must:
 - Add `let onSave: () -> Void` to JokeCardView's properties
 - Pass it through to JokeDetailSheet
-- Update ALL JokeCardView instantiation sites (JokeFeedView, or wherever JokeCardView is used) to provide `onSave`
+- Update ALL JokeCardView instantiation sites to provide `onSave`. Known sites:
+  - **JokeFeedView.swift** (~line 105): Instantiates JokeCardView with callbacks
+  - **SearchView.swift** (~line 132): Instantiates JokeCardView with callbacks
+  - **JokeCardView.swift previews** (~lines 122, 135, 149, 164): Preview providers
 
-Search for `JokeCardView(` across the codebase to find all its instantiation sites and update them.
+Search for `JokeCardView(` across the codebase to confirm no others exist.
 
 Similarly, if RankedJokeCard or JokeOfTheDayView need new closure parameters, trace their usage and update all instantiation sites.
 
 **Do not leave any compile errors.** Every instantiation site of every modified view must be updated.
   </action>
   <verify>Build the project: `xcodebuild build -project MrFunnyJokes/MrFunnyJokes.xcodeproj -scheme MrFunnyJokes -destination 'platform=iOS Simulator,name=iPhone 17 Pro' -quiet 2>&1 | tail -10`. Zero errors. Then: `grep -rn 'onSave' MrFunnyJokes/MrFunnyJokes/Views/ MrFunnyJokes/MrFunnyJokes/App/` should show onSave at every JokeDetailSheet call site.</verify>
-  <done>Save button appears in JokeDetailSheet between rating and copy/share. All 7 JokeDetailSheet call sites pass onSave. All intermediate views (JokeCardView, RankedJokeCard, etc.) updated with onSave if they use callback patterns. Project compiles with zero errors.</done>
+  <done>Save button appears in JokeDetailSheet between rating and copy/share. All 8 JokeDetailSheet call sites pass onSave. All intermediate views (JokeCardView, RankedJokeCard, etc.) updated with onSave if they use callback patterns. Project compiles with zero errors.</done>
 </task>
 
 <task type="auto">
@@ -182,20 +191,9 @@ Similarly, if RankedJokeCard or JokeOfTheDayView need new closure parameters, tr
    ```
    **IMPORTANT:** The swipe action calls `viewModel.unsaveJoke(joke)` (NOT `viewModel.rateJoke(joke, rating: 0)`). This unsaves without removing the rating.
 
-4. **Update jokeCard(for:):** Add a rating indicator to each card. After the character/category HStack, add a small rating emoji indicator if the user has rated the joke:
-   ```swift
-   if let rating = joke.userRating {
-       HStack(spacing: 4) {
-           Text(rating == 5 ? "😂" : "🤮")
-           Text(rating == 5 ? "Hilarious" : "Horrible")
-       }
-       .font(.caption)
-       .foregroundStyle(.secondary)
-   }
-   ```
-   This fulfills the Phase 18 requirement preview -- showing rating status on saved jokes.
+4. **Keep the sheet presentation:** Keep the `.sheet(isPresented:)` with JokeDetailSheet, but make sure `onSave` is wired (already done in Task 1).
 
-5. **Keep the sheet presentation:** Keep the `.sheet(isPresented:)` with JokeDetailSheet, but make sure `onSave` is wired (already done in Task 1).
+**NOTE:** Rating indicators on saved joke cards (METB-03) are deferred to Phase 18.
 
 **JokeViewModel.swift** -- Remove dead rated-joke code:
 
@@ -208,7 +206,7 @@ Similarly, if RankedJokeCard or JokeOfTheDayView need new closure parameters, tr
 If any other consumer exists, keep the property. Only remove if truly dead.
   </action>
   <verify>Build the project: `xcodebuild build -project MrFunnyJokes/MrFunnyJokes.xcodeproj -scheme MrFunnyJokes -destination 'platform=iOS Simulator,name=iPhone 17 Pro' -quiet 2>&1 | tail -10`. Zero errors. Then verify: `grep -n 'ratedJokes\|hilariousJokes\|horribleJokes' MrFunnyJokes/MrFunnyJokes/ViewModels/JokeViewModel.swift` should show zero hits (these properties are removed). `grep -n 'savedJokes' MrFunnyJokes/MrFunnyJokes/Views/MeView.swift` should show the new usage.</verify>
-  <done>MeView displays saved jokes in newest-first order. Empty state says "No Saved Jokes Yet". Swipe-to-delete calls unsaveJoke (preserves rating). Rating indicator shown on each saved joke card. Dead ratedJokes/hilariousJokes/horribleJokes removed from JokeViewModel. Project compiles.</done>
+  <done>MeView displays saved jokes in newest-first order. Empty state says "No Saved Jokes Yet". Swipe-to-delete calls unsaveJoke (preserves rating). Dead ratedJokes/hilariousJokes/horribleJokes removed from JokeViewModel. Project compiles.</done>
 </task>
 
 </tasks>
@@ -225,11 +223,10 @@ If any other consumer exists, keep the property. Only remove if truly dead.
 <success_criteria>
 - Save button visible in JokeDetailSheet between rating and copy/share sections
 - Save button toggles between "Save" (person icon) and "Saved" (person.fill icon) with haptic feedback
-- All 7 JokeDetailSheet call sites wire onSave to the appropriate ViewModel's saveJoke method
+- All 8 JokeDetailSheet call sites wire onSave to the appropriate ViewModel's saveJoke method
 - Me tab shows saved jokes (not rated jokes), ordered newest-first
 - Me tab empty state says "No Saved Jokes Yet"
 - Swipe-to-delete in Me tab unsaves the joke without removing the rating
-- Each saved joke card shows a rating indicator (Hilarious/Horrible) if the user rated it
 - Dead ratedJokes/hilariousJokes/horribleJokes computed properties removed from JokeViewModel
 - Project builds with zero compile errors
 </success_criteria>
