fix(19): revise plan to require explicit pbxproj registration for AnalyticsService

--- a/.planning/phases/19-analytics-foundation/19-01-PLAN.md
+++ b/.planning/phases/19-analytics-foundation/19-01-PLAN.md
@@ -94,7 +94,10 @@ Build the project with `xcodebuild build -project MrFunnyJokes/MrFunnyJokes.xcod
 
 <task type="auto">
   <name>Task 2: Create AnalyticsService singleton with event logging methods</name>
-  <files>MrFunnyJokes/MrFunnyJokes/Services/AnalyticsService.swift</files>
+  <files>
+    MrFunnyJokes/MrFunnyJokes/Services/AnalyticsService.swift
+    MrFunnyJokes/MrFunnyJokes.xcodeproj/project.pbxproj
+  </files>
   <action>
 Create `MrFunnyJokes/MrFunnyJokes/Services/AnalyticsService.swift` following the HapticManager singleton pattern (simple, no state, no ObservableObject needed).
 
@@ -151,10 +154,24 @@ Key design decisions:
 - Event names use snake_case (`joke_rated`, `joke_shared`, `character_selected`) — Firebase Analytics convention.
 - Minimal parameters per event — only what's needed for Phase 20 requirements (EVNT-01, EVNT-02, EVNT-03).
 
-Do NOT add the file to the Xcode project manually — Xcode automatically includes Swift files within the project directory structure.
+**Register AnalyticsService.swift in project.pbxproj:**
+
+This project requires explicit pbxproj registration — Xcode does NOT auto-include Swift files from disk. All existing service files (FirestoreService.swift, LocalStorageService.swift, HapticManager.swift, NetworkMonitor.swift) have explicit entries. Follow the FirestoreService.swift pattern:
+
+1. **PBXBuildFile section** — Add an entry like:
+   `{UNIQUE_UUID_1} /* AnalyticsService.swift in Sources */ = {isa = PBXBuildFile; fileRef = {UNIQUE_UUID_2} /* AnalyticsService.swift */; };`
+
+2. **PBXFileReference section** — Add an entry like:
+   `{UNIQUE_UUID_2} /* AnalyticsService.swift */ = {isa = PBXFileReference; lastKnownFileType = sourcecode.swift; path = AnalyticsService.swift; sourceTree = "<group>"; };`
+
+3. **Services group children** (group `A50000000000000000000008`) — Add `{UNIQUE_UUID_2} /* AnalyticsService.swift */,` to the children array alongside FirestoreService.swift, LocalStorageService.swift, and NetworkMonitor.swift.
+
+4. **PBXSourcesBuildPhase sources list** — Add `{UNIQUE_UUID_1} /* AnalyticsService.swift in Sources */,` to the files array alongside other source file entries.
+
+Use unique UUIDs that don't conflict with any existing entries. Follow the exact formatting of the FirestoreService.swift entries.
   </action>
   <verify>
-Verify the file exists at the correct path. Rebuild with `xcodebuild build -project MrFunnyJokes/MrFunnyJokes.xcodeproj -scheme MrFunnyJokes -destination 'platform=iOS Simulator,name=iPhone 16' -quiet` to confirm the new service compiles without errors and FirebaseAnalytics import resolves. Grep the file for "static let shared" and "Analytics.logEvent" to confirm the singleton and event methods exist.
+Verify the file exists at the correct path. Grep project.pbxproj for "AnalyticsService" and confirm 4+ entries exist (PBXBuildFile, PBXFileReference, Services group child, PBXSourcesBuildPhase). Rebuild with `xcodebuild build -project MrFunnyJokes/MrFunnyJokes.xcodeproj -scheme MrFunnyJokes -destination 'platform=iOS Simulator,name=iPhone 16' -quiet` to confirm the new service compiles without errors and FirebaseAnalytics import resolves. Grep the file for "static let shared" and "Analytics.logEvent" to confirm the singleton and event methods exist.
   </verify>
   <done>AnalyticsService.shared singleton exists in Services/ directory with three methods: logJokeRated, logJokeShared, logCharacterSelected. Each method calls Analytics.logEvent() with descriptive event names and minimal parameters. App builds successfully.</done>
 </task>
