docs(22-02): fix plan wave number and add 22-01 context note

--- a/.planning/phases/22-feed-refresh-behavior/22-02-PLAN.md
+++ b/.planning/phases/22-feed-refresh-behavior/22-02-PLAN.md
@@ -2,7 +2,7 @@
 phase: 22-feed-refresh-behavior
 plan: 02
 type: execute
-wave: 1
+wave: 2
 depends_on: ["22-01"]
 files_modified:
   - "MrFunnyJokes/MrFunnyJokes/ViewModels/JokeViewModel.swift"
@@ -64,6 +64,8 @@ must_haves:
 Close 3 UAT gaps in feed refresh behavior: (1) rated jokes jump to bottom immediately instead of waiting for refresh, (2) viewed jokes (detail sheet opened) do not demote on refresh, (3) feed feels stale because filteredJokes sorts by popularityScore and ignores impression-based freshness tiering.
 
 Purpose: The user reported that rating a joke causes it to disappear from its position (making it hard to share), opening a joke detail and refreshing does not demote it, and the same jokes always appear at the top regardless of how many times the user has seen them. All three gaps trace to filteredJokes ignoring impression data and immediately reacting to rating mutations.
+
+Note: Plan 22-01 fixed rated-at-bottom visibility (rated jokes now appear at bottom instead of being hidden) but did not address the immediate-jump behavior, viewed-joke demotion, or impression-based tiering. This plan closes those remaining gaps.
 
 Output: Updated JokeViewModel.swift with impression-tiered filteredJokes, sessionRatedJokeIds for deferred reordering, and viewed-joke tracking via JokeCardView onView callback.
 </objective>
